# az-website

./: .gitignore  CLAUDE.md  README.md  _navbar-scroll.html  _quarto.yml  about.qmd  blog.qmd  index.qmd  objects.json  old_index.qmd  portfolio.qmd  requirements.txt  resume.qmd  styles.css
_site/: CLAUDE.html  about.html  blog.html  cv.css  (+9 more)
posts/golf_keyframe_extraction/: mkdocs.yml  pyproject.toml
posts/golf_keyframe_extraction/docs/: index.md
posts/golf_keyframe_extraction/docs/reference/: config.md  contact.md  filters.md  io.md  peaks.md  pipeline.md  run_batch.md  signal.md  visualize.md
posts/golf_keyframe_extraction/end2end/: __init__.py  config.py  contact.py  filters.py  io.py  peaks.py  pipeline.py  run_batch.py  signal.py  visualize.py
posts/golf_keyframe_extraction/end2end.egg-info/: PKG-INFO  SOURCES.txt
posts/golf_keyframe_extraction/site/: 404.html  index.html  objects.inv
posts/golf_keyframe_extraction/site/reference/config/: index.html
posts/golf_keyframe_extraction/site/reference/contact/: index.html
posts/golf_keyframe_extraction/site/reference/filters/: index.html
posts/golf_keyframe_extraction/site/reference/io/: index.html
posts/golf_keyframe_extraction/site/reference/peaks/: index.html
posts/golf_keyframe_extraction/site/reference/pipeline/: index.html
posts/golf_keyframe_extraction/site/reference/run_batch/: index.html
posts/golf_keyframe_extraction/site/reference/signal/: index.html
posts/golf_keyframe_extraction/site/reference/visualize/: index.html
posts/golf_keyframe_extraction/site/search/: search_index.json
(+66 files in other folders)
