[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "end2end"
version = "0.1.0"
description = "Golf swing keyframe detection from wrist keypoints"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["end2end*"]
